2008-01-18  Ivan N. Zlatev  <contact@i-nz.net>

	 * PropertyGridView.cs: Hide the grid text box before adjusting it
	 for the newly selected GridItem.
	 [Fixes #338999]

2008-01-18  Jonathan Pobst  <monkey@jpobst.com>

	* Form.cs: Give MDI children the opportunity to cancel the parent form
	attempting to close.  Ensure that all [Form]Clos[ing,ed] events get called
	properly for both the parent and child.
	* Application.cs: Signature of internal method changed, pass the previous
	default of false.
	[Fixes bug #354286]

2008-01-17  Ivan N. Zlatev  <contact@i-nz.net>

	* PropertyGridView.cs: Set the property value only if it has changed.
	[Fixes bug #338997]

2008-01-17  Jonathan Pobst  <monkey@jpobst.com>

	* MenuAPI.cs: Windows sends us MOUSEMOVE messages when any key is pressed.
	If the mouse hasn't actually moved, ignore these messages so the currently
	highlighted menuitem isn't reset to the one under the mouse.
	[Fixes bug #333668]

2008-01-17  Ivan N. Zlatev  <contact@i-nz.net>

	* PropertyGridView.cs: When the property changes Invalidate the GridItem
	in order for the properties with UITypeEditor.GetPaintValueSupported == true
	to reflect the change visually.
	[Fixes bug #338998]

2008-01-17  Jonathan Pobst  <monkey@jpobst.com>

	* ButtonBase.cs: Add LineLimit to 1.1 button drawing, and TextBoxControl
	to 2.0 button drawing.
	* ThemeWin32Classic.cs: Ensure that the rectangle we are using to draw 
	the button text is tall enough for one line.  LineLimit says it will
	always draw at least one line, but it is a lie.
	[Fixes bug #324941]

2008-01-17  Atsushi Enomoto  <atsushi@ximian.com>

	* XplatUIStructs.cs, X11Keyboard.cs :
	  added some more VK_* keys to be handled.

2008-01-16  Andreia Gaita <avidigal@novell.com>

	* Control.cs: Check if there is a container before setting or getting
	the validation flag.

2008-01-16  Andreia Gaita <avidigal@novell.com>

	* ContainerControl.cs: Add flag to track if a control cancels validation, 